Index & Login demo finish

--- a/index.html
+++ b/index.html
@@ -6,11 +6,360 @@
     <title>第三届全国中医药高等院校大学生创新创业大赛服务网</title>
 
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/timeline/timeline.css"/>
 
     <script src="lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/timeline/timeline.min.js"></script>
+
+    <link rel="stylesheet" href="css/index/title.css">
+    <link rel="stylesheet" href="css/index/carousel.css">
+    <link rel="stylesheet" href="css/index/quick_link.css">
+    <link rel="stylesheet" href="css/index/about_this_comp.css">
+    <link rel="stylesheet" href="css/index/timeline.css">
+    <link rel="stylesheet" href="css/index/school_list.css">
+    <link rel="stylesheet" href="css/index/footer.css">
+    <style>
+        body {
+            background: #EFEFEF;
+        }
+    </style>
 </head>
 <body>
+<!--navigation-->
+<div id="nav"><script>$("#nav").load('model/navigator.html',function(){nav_toggle(0)});</script></div>
 
+<!--carousel-->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div style="background-image: url(img/index/car/a.jpg);" class="d-block w-100" alt="..."></div>
+        </div>
+        <div class="carousel-item">
+            <div style="background-image: url(img/index/car/b.jpeg);" class="d-block w-100" alt="..."></div>
+        </div>
+        <div class="carousel-item">
+            <div style="background-image: url(img/index/car/c.jpeg);" class="d-block w-100" alt="..."></div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" data-target="#carouselExampleIndicators"  data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" data-target="#carouselExampleIndicators"  data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+<!--quick link-->
+<div class="quick-link">
+    <div class="index-title index-title-light">
+        <hr>
+        <h1>大赛快捷通道</h1>
+    </div>
+    <div class="quick-link-btns container">
+        <div class="row">
+            <button class="quick-btn col-sm m-3">参赛报名</button>
+            <button class="quick-btn col-sm m-3">大学生创新创业成果展</button>
+            <button class="quick-btn col-sm m-3">"双对接双助力"活动</button>
+            <button class="quick-btn col-sm m-3">创新创业研究会成立仪式</button>
+        </div>
+    </div>
+</div>
+
+<!--about this comp-->
+<div class="about-camp">
+    <div class="index-title index-title-dark">
+        <hr>
+        <h1>大赛相关</h1>
+    </div>
+    <div class="container">
+        <div class="row row_div_each">
+            <div class="col-md-6 card_each_surface_change top">
+                <div id="c1" class="card">
+                    <div class="card-header card-header-s hd">
+                        <img src="img/index/cicon/cicon_01.png" alt="">
+                        大赛组委会
+                    </div>
+                    <div class="card-body">
+                        大赛设立组织委员会（简称大赛组委会），由全国中医药高等教育学会会长、国家中医药管理局人事教育司司长卢国慧担任主任，教育部高等学校中医学类专业教学指导委员会秘书长、浙江中医药大学副校长xxx任副主任，全国中医药高等教育学会创新创业研究会（筹）副理事长单位的各高校分管创新创业教育的校领导.......担任成员，负责大赛的组织实施。大赛组委会下设秘书处，秘书长由北京中医药大学招生就业处处长田润平担任，副秘书长由承办单位长春中医药大学创新创业学院执行院长曹世奎担任，秘书处设在浙江中医药大学xx学院，负责大赛日常工作。
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 card_each_surface_change top">
+                <div id="c2" class="card">
+                    <div class="card-header card-header-s hd">
+                        <img src="img/index/cicon/cicon_02.png" alt="">
+                        专家委员会
+                    </div>
+                    <div class="card-body">
+                        大赛设立专家委员会，由教育部高等学校中医学类专业教学指导委员会主任委员、浙江中医药大学党委书记xxx担任主任，中国“互联网+”大学生创新创业大赛评委、企业家、投资人和国家创新创业导师作为成员，负责参赛项目的评审工作，指导大学生创新创业竞赛。
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row row_div_each">
+            <div class="col-md-6 card_each_surface_change">
+                <div id="c3" class="card">
+                    <div class="card-header card-header-s hd">
+                        <img src="img/index/cicon/cicon_03.png" alt="">
+                        大赛组委会联系方式
+                    </div>
+                    <div class="card-body">
+                        <dl>
+                            <dd><b>谢书铭</b>：浙江中医药大学创新创业学院院长</dd>
+                            <dd><b>罗杰</b>：浙江中医药大学创新创业学院主任</dd>
+                            <dd><b>电话</b>：0571-xxxxxxxx，<b>传真</b>：0571-xxxxxxxx</dd>
+                            <dd><b>电子邮箱</b>：xxxxx@zcmu.edu.cn</dd>
+                            <dd><b>地址</b>：浙江省杭州市滨江区滨文路548号</dd>
+                            <dd><b>邮编</b>：310053</dd>
+                            <dd><b>大赛工作QQ群为</b>：xxxxxxxx，请各参赛高校指定两名工作人员加入该群，便于赛事工作沟通交流。</dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 card_each_surface_change">
+                <div class="card" id="c4">
+                    <div class="card-header card-header-s hd">
+                        <img src="img/index/cicon/cicon_04.png" alt="">
+                        参赛组别
+                    </div>
+                    <div class="card-body">根据参赛项目所处的创业阶段、已获投资情况和项目特点，分为创意组、创新组、初创成长组。</div>
+                </div>
+            </div>
+        </div>
+        <div class="row row_div_each">
+            <div class="col-md-6 card_each_surface_change">
+                <div id="c5" class="card">
+                    <div class="card-header card-header-s hd">
+                        <img src="img/index/cicon/cicon_05.png" alt="">
+                        资料下载
+                    </div>
+                    <div class="card-body">
+                        <div class="download_button_div">
+                            <button type="button" class="btn btn-primary download_button">大赛通知</button>
+                            <button type="button" class="btn btn-primary download_button">评审规则</button>
+                        </div>
+                        <div class="download_button_div">
+                            <button type="button" class="btn btn-primary download_button">院校操作手册</button>
+                            <button type="button" class="btn btn-primary download_button">学生操作手册</button>
+                        </div>
+                        <div class="download_button_div">
+                            <button type="button" class="btn btn-primary download_button">大赛参赛要求</button>
+                            <button type="button" class="btn btn-primary download_button">半决赛院校手册</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 card_each_surface_change">
+                <div id="c6" class="card">
+                    <div class="card-header card-header-s hd">
+                        <img src="img/index/cicon/cicon_06.png" alt="">
+                        奖项设置
+                    </div>
+                    <div class="card-body">
+                        大赛拟设金奖30个（创意组8、创新组15个、初创成长组7个），银奖60个（创意组15个、创新组30个、初创成长组15个），铜奖80个（创意组20个、创新组40个、初创成长组20个），获奖项目将由大赛组委会颁发获奖证书和奖金。
+                        设最佳创意奖、最具商业价值奖、最具人气奖各 1 个；获奖项目将由组委会颁发获奖证书。
+                        设优秀组织单位奖和优秀创新创业导师奖若干名，由组委会颁发证书。
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<!--timeline-->
+<div class="timeline">
+    <div class="index-title index-title-dark">
+        <hr>
+        <h1>赛程安排</h1>
+    </div>
+    <div class="container">
+        <div id="cd-timeline" class="cd-container">
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-item">
+                    <!--      <img src="images/cd-icon-picture.svg" alt="Picture">-->
+                </div>
+                <div class="cd-timeline-content">
+                    <h2>参赛报名</h2>
+                    <p>参赛团队可通过登录“第二届全国中医药高等院校大学生创新创业大赛服务网”（网址为：http://pk.wlzjedu.com/）进行报名。报名系统开放截止时间为9月29日。</p>
+                    <!--                <a href="#" class="cd-read-more">阅读更多</a>-->
+                    <span class="cd-date">5.29-9.29</span>
+                </div>
+            </div>
+
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-movie">
+                    <!--      <img src="images/cd-icon-movie.svg" alt="Movie">-->
+                </div>
+
+                <div class="cd-timeline-content">
+                    <h2>校赛初赛</h2>
+                    <p>各院校登录“第二届全国中医药高等院校大学生创新创业大赛服务网”进行大赛管理和信息查看，校级帐号由大赛组委会秘书处进行管理。校级初赛阶段的参赛材料、比赛环节、评审方式等由各院校自行决定。各院校须在11月2日24时前完成校级初赛和进入全国半决赛项目资料的上传工作（要求上传参赛项目的PPT演示文稿、创业计划书及其他佐证材料），推荐的项目应有名次排序，并在各院校管理系统中赋分，供全国半决赛（网络评审）参考。</p>
+                    <!--                <a href="#" class="cd-read-more">阅读更多</a>-->
+                    <span class="cd-date">9.1-11.3</span>
+                </div>
+            </div>
+
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-picture">
+                    <!--      <img src="images/cd-icon-picture.svg" alt="Picture">-->
+                </div>
+
+                <div class="cd-timeline-content">
+                    <h2>全国半决赛</h2>
+                    <p>大赛专家委员会对入围全国半决赛项目进行网上评审，择优选拔项目决出入围全国总决赛候选项目170个，各校申报全国半决赛项目数额请参考《第二届全国中医药高等院校大学生创新创业大赛入围全国半决赛项目分配名额》。</p>
+                    <p>全国总决赛候选项目发布及参赛资料补充上传（11月11日—16日）。大赛组委会对全国半决赛网络评审结果通过大赛服务网进行发布，同时各院校对进入大赛总决赛候选项目进行参赛资料补充（要求上传参赛项目的PPT演示文稿、创业计划书、一分钟展示视频及其他佐证材料），并按时上传至大赛服务网。</p>
+                    <!--                <a href="#" class="cd-read-more">阅读更多</a>-->
+                    <span class="cd-date">11.4-11.10</span>
+                </div>
+            </div>
+
+            <div class="cd-timeline-block">
+                <div class="cd-timeline-img cd-location">
+                    <!--      <img src="images/cd-icon-picture.svg" alt="Picture">-->
+                </div>
+
+                <div class="cd-timeline-content">
+                    <h2>全国总决赛及颁奖典礼</h2>
+                    <p>大赛组委会负责全国总决赛的组织实施工作，并按照全国决赛评审规则，研究确定比赛环节、评审办法等重大事项。专家评审委员会负责参赛项目的评审工作。总决赛分三个环节进行：</p>
+                    <p></p>
+                    <!--                <a href="#" class="cd-read-more">阅读更多</a>-->
+                    <span class="cd-date">11.17-12.8</span>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!--about school list-->
+<div class="school-list">
+    <div class="index-title index-title-dark">
+        <hr>
+        <h1>参赛院校</h1>
+        <span>（排名按拼音顺序）</span>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="card card-s" style="border: none !important;">
+                <div class="card-body">
+                    <div class="school_image_div_grid">
+                        <a href="http://www.ahtcm.edu.cn/"><img src="img/index/school_logo/sc_16.png" alt="安徽中医药大学"></a>
+                        <a href="http://www.bucm.edu.cn/"><img src="img/index/school_logo/sc_01.png" alt="北京中医药大学"></a>
+                        <a href="https://www.ccucm.edu.cn/"><img src="img/index/school_logo/sc_10.png" alt="长春中医药大学"></a>
+                        <a href="http://www.cdutcm.edu.cn/"><img src="img/index/school_logo/sc_05.png" alt="成都中医药大学"></a>
+                        <a href="https://www.fjtcm.edu.cn/"><img src="img/index/school_logo/sc_13.png" alt="福建中医药大学"></a>
+                        <a href="http://www.gszy.edu.cn/reception"><img src="img/index/school_logo/sc_24.png" alt="甘肃中医药大学"></a>
+                        <a href="http://www.gxtcmu.edu.cn/"><img src="img/index/school_logo/sc_15.png" alt="广西中医药大学"></a>
+                        <a href="http://www.gzucm.edu.cn/"><img src="img/index/school_logo/sc_02.png" alt="广州中医药大学"></a>
+                        <a href="http://www.gyctcm.edu.cn/"><img src="img/index/school_logo/sc_21.png" alt="贵阳中医学院"></a>
+                        <a href="http://www.hebcm.edu.cn/"><img src="img/index/school_logo/sc_19.png" alt="河北中医学院"></a>
+                        <a href="https://www.hbtcm.edu.cn/"><img src="img/index/school_logo/sc_14.png" alt="湖北中医药大学"></a>
+                        <a href="https://www.hactcm.edu.cn/"><img src="img/index/school_logo/sc_20.png" alt="河南中医药大学"></a>
+                        <a href="http://www.hnucm.edu.cn/"><img src="img/index/school_logo/sc_12.png" alt="湖南中医药大学"></a>
+                        <a href="http://www.hljucm.net/"><img src="img/index/school_logo/sc_06.png" alt="黑龙江中医药大学"></a>
+                        <a href="http://www.jxutcm.edu.cn/"><img src="img/index/school_logo/sc_17.png" alt="江西中医药大学"></a>
+                        <a href="http://www.lnutcm.edu.cn/"><img src="img/index/school_logo/sc_09.png" alt="辽宁中医药大学"></a>
+                        <a href="http://www.njucm.edu.cn/"><img src="img/index/school_logo/sc_04.png" alt="南京中医药大学"></a>
+                        <a href="http://www.sdutcm.edu.cn/"><img src="img/index/school_logo/sc_07.png" alt="山东中医药大学"></a>
+                        <a href="http://www.sxtcm.edu.cn/"><img src="img/index/school_logo/sc_18.png" alt="山西中医药大学"></a>
+                        <a href="http://www.sntcm.edu.cn/"><img src="img/index/school_logo/sc_23.png" alt="陕西中医药大学"></a>
+                        <a href="http://www.shutcm.edu.cn/"><img src="img/index/school_logo/sc_03.png" alt="上海中医药大学"></a>
+                        <a href="http://news13.tjutcm.edu.cn/c2015.htm"><img src="img/index/school_logo/sc_08.png"
+                                                                             alt="天津中医药大学"></a>
+                        <a href="http://www.ynutcm.edu.cn/"><img src="img/index/school_logo/sc_22.png" alt="云南中医药大学"></a>
+                        <a href="https://www.zcmu.edu.cn/"><img src="img/index/school_logo/sc_11.png" alt="浙江中医药大学"></a>
+                        <a href="http://www.fimmu.com/"><img src="img/index/school_logo/sc_27.png" alt="南方医科大学"></a>
+                        <a href="http://www.stcmchina.com/"><img src="img/index/school_logo/sc_28.png" alt="山东中医药高等专科学校"></a>
+                        <a href="http://www.ttmc.edu.cn/"><img src="img/index/school_logo/sc_25.png" alt="西藏藏医学院"></a>
+                        <a href="http://www.gdpu.edu.cn/"><img src="img/index/school_logo/sc_29.png" alt="广东药科大学"></a>
+                        <a href="http://www.scctcm.cn/"><img src="img/index/school_logo/sc_30.png" alt="四川中医药高等专科学校"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+<!--footer-->
+<footer>
+    <div class="container-fluid" style="margin-top: 40px;">
+        <div class="row" style="text-align: center;">
+            <div class="col-md-4 footer_surface2">
+                <div class="card footer_card_surface2">
+                    <div class="card-header"
+                         style="background-color: #2e323d !important; border-bottom: 1px solid rgba(255,255,255,.125);">
+                        <h5>主办单位承办单位</h5>
+                    </div>
+                    <div class="card-body">
+                        <dl>
+                            <dd>教育部高等学校中医学类专业教学指导委员会</dd>
+                            <dd>全国中医药高等教育学会</dd>
+                            <dd>全国中医药高等教育学会创新创业教育研究会（筹）</dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 footer_surface2">
+                <div class="card footer_card_surface2">
+                    <div class="card-header"
+                         style="background-color: #2e323d !important; border-bottom: 1px solid rgba(255,255,255,.125);">
+                        <h5>大赛组委会联系方式</h5>
+                    </div>
+                    <div class="card-body">
+                        <dl>
+                            <dd><b>谢书铭</b>：浙江中医药大学创新创业学院院长</dd>
+                            <dd><b>罗杰</b>：浙江中医药大学创新创业学院主任</dd>
+                            <dd><b>电话</b>：0571-xxxxxxxx，<b>传真</b>：0571-xxxxxxxx</dd>
+                            <dd><b>电子邮箱</b>：xxxxx@zcmu.edu.cn</dd>
+                            <dd><b>地址</b>：浙江省杭州市滨江区滨文路548号</dd>
+                            <dd><b>邮编</b>：310053</dd>
+                            <dd><b>大赛工作QQ群为</b>：xxxxxxxx，请各参赛高校指定两名工作人员加入该群，便于赛事工作沟通交流。</dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 footer_surface2">
+                <div class="card footer_card_surface2">
+                    <div class="card-header"
+                         style="background-color: #2e323d !important; border-bottom: 1px solid rgba(255,255,255,.125);">
+                        <h5>扫码关注浙中医大创新创业公众号</h5>
+                    </div>
+                    <div class="card-body">
+                        <img src="img/index/wx_qrcode.jpeg" width="138" height="138" alt="微信公众号二维码">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 footer_surface1">
+                <div class="card footer_card_surface1" style="
+                                border-top-style: solid !important;
+                                border-bottom-style: none;
+                                border-color: #efefef !important;
+                                border-width: thin !important;">
+                    <div class="card-body" style="text-align: center;">
+                        &copy;第三届全国中医药高等院校大学生创新创业大赛组委会. All right reserved.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+<script src="lib/timeline/timeline-run.js"></script>
 </body>
 </html>
